--- a/index.html
+++ b/index.html
@@ -2,7 +2,28 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="css.css">
+        <style>
+              body, p {
+                    margin: 0;
+              }
+              video {
+                    position: relative;
+                    width: 100vw;
+                    height: 56.25vw;
+                    left: 0;
+                    top: 0;
+                    background-color: black;
+                }
+                p {
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%,-50%);
+                    font-size: 5vw;
+                    color: rgba(255, 255, 255, 0.0);
+                    -webkit-text-stroke: 1px #ffffff;
+                }
+        </style>
         <title>HTNL</title>
     </head>
     <body>
