--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>HTNL</title>
         <style>
               body, p {
                     margin: 0;
@@ -24,14 +25,12 @@
                     -webkit-text-stroke: 1px #ffffff;
                 }
         </style>
-        <title>HTNL</title>
     </head>
     <body>
         <video muted autoplay loop>
             <source src="sample.mp4" type="viedo/mp4">
         </video>
         <p>
-            Neon
-        </p>
+            Neon</p>
     </body>
 </html>
