--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
               }
               video {
                     position: relative;
-                    width: 100vw;
-                    height: 56.25vw;
+                    width: 100%;
+                    height: 100%vw;
                     left: 0;
                     top: 0;
                     background-color: black;
