--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     </head>
     <body>
         <video muted autoplay loop>
-            <source src="Neon - 21368.mp4" type="viedo/mp4">
+            <source src="sample.mp4" type="viedo/mp4">
         </video>
         <p>
-            Neon</p>
+            mood</p>
     </body>
 </html>
