--- a/index.html
+++ b/index.html
@@ -4,16 +4,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>HTNL</title>
         <style>
-              body, p {
-                    margin: 0;
-              }
-              video {
+            video{
                     position: relative;
                     width: 100%;
-                    height: 100%vw;
+                    height: 100%;
                     left: 0;
                     top: 0;
-                    background-color: black;
                 }
                 p {
                     position: absolute;
