--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
                     height: 100%;
                     left: 0;
                     top: 0;
+                    background-color: black;
                 }
                 p {
                     position: absolute;
