--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         }
         #box7 {
-            background-image: url(f.pdf);
+            background-image: url(f.jpg);
         }
         #box8 {
             background-image: url(a.jpg);
